<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/cover_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/facebook_cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_languages" />

            <Button
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/btn_languages"
                android:textAllCaps="false"
                android:textColor="#4e69a2"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ed_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/ed_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:hint="@string/ed_password"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="#4e69a2"
            android:enabled="false"
            android:text="@string/btn_login"
            android:textColor="@color/text_login_color" />

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/btn_forget"
            android:textColor="#4e69a2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/or"
                android:textColor="@android:color/darker_gray" />

            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray" />
        </LinearLayout>
        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="33dp"
            android:background="#00a400"
            android:text="@string/btn_newaccount"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />


    </LinearLayout>
    <ImageView
        android:id="@+id/im_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:visibility="invisible"
        android:layout_marginStart="160dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="321dp"
        android:src="@drawable/face_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

